--- a/src/main/resources/assets/witherskelefix/lang/en_US.lang
+++ b/src/main/resources/assets/witherskelefix/lang/en_US.lang
@@ -1,3 +1,3 @@
 item.witherskelefix.fragment.name=Wither Skull Fragment
-item.witherskelefix.blade.name=Immolation Blade (Lava)
-item.witherskelefix.blade2.name=Immolation Blade (Blaze)
+item.witherskelefix.blade.name=Immolation Blade
+item.witherskelefix.blade2.name=Blazing Immolation Blade
